AC_INIT(paranoia.c)

AC_CANONICAL_HOST

AC_PROG_CC	

AC_PROG_RANLIB
AC_CHECK_PROG(AR,ar,ar)
AC_PROG_MAKE_SET
AC_C_CONST


if test -z "$GCC"; then
	DEBUG="-g"
	OPT="-O"
else
	case $host in 
	i?86-*-linux*)
		DEBUG="-g -Wall -fsigned-char"
		OPT="-O20 -ffast-math -fsigned-char -finline-functions"
                ;;
	*)
		DEBUG="-g -Wall -fsigned-char"
		OPT="-O20 -fsigned-char"
                ;;
        esac
fi

AC_HEADER_STDC

CFLAGS=""

TYPESIZES="" 

AC_CHECK_SIZEOF(short)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(long long)

case 2 in
	$ac_cv_sizeof_short) SIZE16="short";;
	$ac_cv_sizeof_int) SIZE16="int";;
esac

case 4 in
	$ac_cv_sizeof_short) SIZE32="short";;
	$ac_cv_sizeof_int) SIZE32="int";;
	$ac_cv_sizeof_long) SIZE32="long";;
esac

AC_CHECK_TYPE(int16_t,,AC_DEFINE_UNQUOTED(int16_t,$SIZE16))
AC_CHECK_TYPE(int32_t,,AC_DEFINE_UNQUOTED(int32_t,$SIZE32))
AC_CHECK_TYPE(u_int16_t,,AC_DEFINE_UNQUOTED(u_int16_t,$SIZE16))
AC_CHECK_TYPE(u_int32_t,,AC_DEFINE_UNQUOTED(u_int32_t,$SIZE32))

if test -z "$SIZE16"; then
	AC_MSG_ERROR([No 16 bit type found on this platform!])
fi
if test -z "$SIZE32"; then
	AC_MSG_ERROR([No 32 bit type found on this platform!])
fi
	

AC_SUBST(SBPCD_H)
AC_SUBST(UCDROM_H)
AC_SUBST(TYPESIZES)
AC_SUBST(OPT)
AC_SUBST(DEBUG)
AC_SUBST(CC)

AC_OUTPUT(Makefile)
