noinst_PROGRAMS = antlr

antlr_SOURCES = antlr.c dumpcycles.c err.c fset.c hash.c misc.c scan.c bits.c dumpnode.c fcache.c gen.c lex.c mrhoist.c build.c egman.c fset2.c globals.c main.c pred.c set.c generic.h hash.h mode.h proto.h stdpccts.h syn.h tokens.h

AM_CFLAGS = -DUSER_ZZSYN  -DZZLEXBUFSIZE=32000

AM_CPPFLAGS = -I../h

